Added GCM failure results example

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -1358,7 +1358,7 @@
                 }
 
             </pre>
-<p id="rfc.section.C.p.2">An example of a decrypt failure test results</p>
+<p id="rfc.section.C.p.2">An example of the test results format from a decrypt operation including failure case.</p>
 <pre>
                 {
                     "acvVersion": "0.2",
@@ -1366,8 +1366,13 @@
                     "testResults": [
                         {
                             "tcId": 2171,
-			    "decryptFail" : "true"
+			    "pt" : "2CE1129D3E2F25468A9EE13ED39C902C"
                         },
+                            "tcId": 2172,
+			    "decryptFail" : "true"
+                        }
+                    ]
+                }
             </pre>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Author's Address</a>
