add testType and Informative references

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -388,7 +388,9 @@
 <link href="#rfc.section.5" rel="Chapter" title="5 Acknowledgements"/>
 <link href="#rfc.section.6" rel="Chapter" title="6 IANA Considerations"/>
 <link href="#rfc.section.7" rel="Chapter" title="7 Security Considerations"/>
-<link href="#rfc.references" rel="Chapter" title="8 Normative References"/>
+<link href="#rfc.references" rel="Chapter" title="8 References"/>
+<link href="#rfc.references.1" rel="Chapter" title="8.1 Normative References"/>
+<link href="#rfc.references.2" rel="Chapter" title="8.2 Informative References"/>
 <link href="#rfc.appendix.A" rel="Chapter" title="A Example Capabilities JSON Object"/>
 <link href="#rfc.appendix.B" rel="Chapter" title="B Example Test Vectors JSON Object"/>
 <link href="#rfc.appendix.C" rel="Chapter" title="C Example Test Results JSON Object"/>
@@ -471,8 +473,10 @@
 <li>5.   <a href="#rfc.section.5">Acknowledgements</a></li>
 <li>6.   <a href="#rfc.section.6">IANA Considerations</a></li>
 <li>7.   <a href="#rfc.section.7">Security Considerations</a></li>
-<li>8.   <a href="#rfc.references">Normative References</a></li>
-<li>Appendix A.   <a href="#rfc.appendix.A">Example Capabilities JSON Object</a></li>
+<li>8.   <a href="#rfc.references">References</a></li>
+<ul><li>8.1.   <a href="#rfc.references.1">Normative References</a></li>
+<li>8.2.   <a href="#rfc.references.2">Informative References</a></li>
+</ul><li>Appendix A.   <a href="#rfc.appendix.A">Example Capabilities JSON Object</a></li>
 <li>Appendix B.   <a href="#rfc.appendix.B">Example Test Vectors JSON Object</a></li>
 <li>Appendix C.   <a href="#rfc.appendix.C">Example Test Results JSON Object</a></li>
 <li><a href="#rfc.authors">Author's Address</a></li>
@@ -794,15 +798,10 @@
 <ul>
   <li>AES-ECB</li>
   <li>AES-CBC</li>
-  <li>AES-CBCI</li>
   <li>AES-OFB</li>
-  <li>AES-OFBI</li>
   <li>AES-CFB1</li>
   <li>AES-CFB8</li>
   <li>AES-CFB128</li>
-  <li>AES-CFBP1</li>
-  <li>AES-CFBP8</li>
-  <li>AES-CFBP128</li>
   <li>AES-CTR</li>
   <li>AES-GCM</li>
   <li>AES-CCM</li>
@@ -811,10 +810,15 @@
   <li>AES-KWP</li>
   <li>TDES-ECB</li>
   <li>TDES-CBC</li>
+  <li>TDES-CBC-I</li>
   <li>TDES-CFB1</li>
   <li>TDES-CFB8</li>
   <li>TDES-CFB64</li>
+  <li>TDES-CFB-P1</li>
+  <li>TDES-CFB-P8</li>
+  <li>TDES-CFB-P64</li>
   <li>TDES-OFB</li>
+  <li>TDES-OFB-I</li>
   <li>TDES-CTR</li>
   <li>TDES-KW</li>
 </ul>
@@ -866,6 +870,16 @@
     <tr>
       <td class="left">direction</td>
       <td class="left">The encryption direction: encrypt or decrypt</td>
+      <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">testType</td>
+      <td class="left">The test category type (KAT or MCT)</td>
       <td class="left">value</td>
     </tr>
     <tr>
@@ -1105,7 +1119,8 @@
 <p id="rfc.section.6.p.1">This memo includes no request to IANA.</p>
 <h1 id="rfc.section.7"><a href="#rfc.section.7">7.</a> <a href="#Security" id="Security">Security Considerations</a></h1>
 <p id="rfc.section.7.p.1">Security considerations are addressed by the ACVP specification.</p>
-<h1 id="rfc.references"><a href="#rfc.references">8.</a> Normative References</h1>
+<h1 id="rfc.references"><a href="#rfc.references">8.</a> References</h1>
+<h1 id="rfc.references.1"><a href="#rfc.references.1">8.1.</a> Normative References</h1>
 <table>
   <tbody>
     <tr>
@@ -1119,6 +1134,23 @@
         <b id="RFC2119">[RFC2119]</b>
       </td>
       <td class="top"><a>Bradner, S.</a>, "<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>", BCP 14, RFC 2119, DOI 10.17487/RFC2119, March 1997.</td>
+    </tr>
+  </tbody>
+</table>
+<h1 id="rfc.references.2"><a href="#rfc.references.2">8.2.</a> Informative References</h1>
+<table>
+  <tbody>
+    <tr>
+      <td class="reference">
+        <b id="AESAVS">[AESAVS]</b>
+      </td>
+      <td class="top"><a title="NIST">Lawrence E. Bassham III, LEB.</a>, "<a>The Advanced Encryption Standard Algorithm Validation Suite (AESAVS)</a>", 2002.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="TMOVS">[TMOVS]</b>
+      </td>
+      <td class="top"><a title="NIST">Sharon S. Keller, SSK.</a>, "<a>Modes of Operation Validation System for the Triple Data Encryption Algorithm (TMOVS)</a>", 2012.</td>
     </tr>
   </tbody>
 </table>
