--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -442,7 +442,7 @@
   <td class="right">2016</td>
 </tr>
 <tr>
-  <td class="left">Expires: July 29, 2017</td>
+  <td class="left">Expires: August 4, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -463,7 +463,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on July 29, 2017.</p>
+<p>This Internet-Draft will expire on August 4, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -673,10 +673,10 @@
       <td class="left"/>
       <td class="left"/>
       <td class="left"/>
-      <td class="left"/>    
+      <td class="left"/>
     </tr>
     <tr>
-      <td class="left">Vector Set download request</td>    
+      <td class="left">Vector Set download request</td>
       <td class="left">/vectors</td>
       <td class="left">GET</td>
       <td class="left">
@@ -684,14 +684,14 @@
       </td>
     </tr>
     <tr>
-      <td class="left"/>    
       <td class="left"/>
       <td class="left"/>
-      <td class="left"/>    
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">Submit Vector Test Results</td>
-      <td class="left">/vectors</td>    
+      <td class="left">/vectors</td>
       <td class="left">POST</td>
       <td class="left">
         <a href="#vector_dl2">Section 11.4</a>
@@ -701,12 +701,12 @@
       <td class="left"/>
       <td class="left"/>
       <td class="left"/>
-      <td class="left"/>    
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">Request Validation Results</td>
       <td class="left">/results</td>
-      <td class="left">GET</td>    
+      <td class="left">GET</td>
       <td class="left">
         <a href="#results_req">Section 11.5</a>
       </td>
@@ -715,8 +715,8 @@
       <td class="left"/>
       <td class="left"/>
       <td class="left"/>
-      <td class="left"/>    
-    </tr>    
+      <td class="left"/>
+    </tr>
     <tr>
       <td class="left">Request server to cancel session</td>
       <td class="left">/cancel</td>
@@ -904,7 +904,7 @@ Host: www.my-acvpserver.com
 Authorization: Bearer JWT
             </pre>
 <p class="figure">Figure 9</p>
-<p id="rfc.section.11.3.p.2">The server will respond with the vector set associated with the vsId for the client to process.  The actual test group content contained in the response will vary depending on the specific sub-specification of the algorithm type being tested.</p>
+<p id="rfc.section.11.3.p.2">The server will respond with the vector set associated with the vsId for the client to process.  The actual test group content contained in the response will vary depending on the specific sub-specification of the algorithm and testType being tested.</p>
 <div id="rfc.figure.10"/>
 <div id="xml_json6"/>
 <pre>
@@ -918,6 +918,7 @@ Content-Length: &lt;length of results&gt;
   "vs_id": 1437,
   "algorithm": "AES-GCM",
   "direction": "encrypt",
+  "testType" : "KAT"
   "test_groups": [
     {
       "keyLen": 128,
@@ -960,7 +961,7 @@ Content-Length: &lt;length of results&gt;
 <p class="figure">Figure 11</p>
 <p id="rfc.section.11.3.p.4">Where the retry value represents the number of seconds for the client to wait before retrying the request.  The server may set the retry value based on the current server load and expected processing time to generate the vector set.  </p>
 <h1 id="rfc.section.11.4"><a href="#rfc.section.11.4">11.4.</a> <a href="#vector_dl2" id="vector_dl2">Submit Test Results</a></h1>
-<p id="rfc.section.11.4.p.1">The client will send this request to submit the test results for an individual vector set.</p>
+<p id="rfc.section.11.4.p.1">The client will send this request to submit the test results for an individual vector set. Similar to the vector set download the format will vary depending on the specific sub-specification of the algorithm and testType being tested.</p>
 <div id="rfc.figure.12"/>
 <div id="xml_json8"/>
 <pre>
