add testType and Informative references

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -729,6 +729,20 @@
       <td class="left"/>
     </tr>
     <tr>
+      <td class="left">testType</td>
+      <td class="left">The test category type</td>
+      <td class="left">value</td>
+      <td class="left">KAT or MCT</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">ctrSource</td>
       <td class="left">The source of the counter for counter-mode</td>
       <td class="left">value</td>
@@ -878,16 +892,6 @@
       <td class="left"/>
     </tr>
     <tr>
-      <td class="left">testType</td>
-      <td class="left">The test category type (KAT or MCT)</td>
-      <td class="left">value</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
       <td class="left">testGroups</td>
       <td class="left">Array of test group JSON objects, which are defined in <a href="#tgjs">Section 3.1</a></td>
       <td class="left">array</td>
@@ -962,6 +966,18 @@
       <td class="left">Length of AEAD tag in bits to use</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">testType</td>
+      <td class="left">The test category type</td>
+      <td class="left">value</td>
+      <td class="left">No</td>
     </tr>
     <tr>
       <td class="left"/>
@@ -1211,6 +1227,7 @@
                       "ptLen": 0,
                       "aadLen": 128,
                       "tagLen": 128,
+                      "testType" : "KAT",
                       "tests": [
                         {
                           "tcId": 2171,
@@ -1244,6 +1261,7 @@
                       "ptLen": 0,
                       "aadLen": 136,
                       "tagLen": 128,
+                      "testType" : "KAT",
                       "tests": [
                         {
                           "tcId": 2186,
@@ -1265,6 +1283,7 @@
                       "ptLen": 128,
                       "aadLen": 128,
                       "tagLen": 128,
+                      "testType" : "KAT",
                       "tests": [
                         {
                           "tcId": 2201,
