--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -442,7 +442,7 @@
   <td class="right">2016</td>
 </tr>
 <tr>
-  <td class="left">Expires: August 5, 2017</td>
+  <td class="left">Expires: August 6, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -463,7 +463,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on August 5, 2017.</p>
+<p>This Internet-Draft will expire on August 6, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -914,11 +914,11 @@ Status: 200 OK
 Content-Type: application/json
 Content-Length: &lt;length of results&gt;
 {
-  "acv_version": "0.2",
-  "vs_id": 1437,
+  "acvVersion": "0.2",
+  "vsId": 1437,
   "algorithm": "AES-GCM",
   "direction": "encrypt",
-  "test_groups": [
+  "testGroups": [
     {
       "keyLen": 128,
       "ivLen": 96,
@@ -953,7 +953,7 @@ Status: 200 OK
 Content-Type: application/json
 Content-Length: &lt;length of results&gt;
 {
-"vs_id": 1437,
+"vsId": 1437,
 "version" : 0.2,
 "retry" : 10
 }
@@ -965,7 +965,7 @@ Content-Length: &lt;length of results&gt;
 <div id="rfc.figure.12"/>
 <div id="xml_json8"/>
 <pre>
-   POST /validation/acvp/vectors?vs_id=1437 HTTP1.1
+   POST /validation/acvp/vectors?vsId=1437 HTTP1.1
    User Agent: acvp-client/0.2
    Host: www.my-acvpserver.com
    Authorization: Bearer JWT
