More testType, MCT examples and references

--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -384,12 +384,14 @@
 <link href="#rfc.section.2.5" rel="Chapter" title="2.5 Supported MAC Algorithms"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
-<link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
+<link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Case JSON Schema"/>
 <link href="#rfc.section.4" rel="Chapter" title="4 Test Vector Responses"/>
 <link href="#rfc.section.5" rel="Chapter" title="5 Acknowledgements"/>
 <link href="#rfc.section.6" rel="Chapter" title="6 IANA Considerations"/>
 <link href="#rfc.section.7" rel="Chapter" title="7 Security Considerations"/>
-<link href="#rfc.references" rel="Chapter" title="8 Normative References"/>
+<link href="#rfc.references" rel="Chapter" title="8 References"/>
+<link href="#rfc.references.1" rel="Chapter" title="8.1 Normative References"/>
+<link href="#rfc.references.2" rel="Chapter" title="8.2 Informative References"/>
 <link href="#rfc.appendix.A" rel="Chapter" title="A Example Secure Hash Capabilities JSON Object"/>
 <link href="#rfc.appendix.B" rel="Chapter" title="B Example Test Vectors JSON Object"/>
 <link href="#rfc.appendix.C" rel="Chapter" title="C Example Test Results JSON Object"/>
@@ -468,13 +470,15 @@
 <li>2.5.   <a href="#rfc.section.2.5">Supported MAC Algorithms</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
-<li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
+<li>3.2.   <a href="#rfc.section.3.2">Test Case JSON Schema</a></li>
 </ul><li>4.   <a href="#rfc.section.4">Test Vector Responses</a></li>
 <li>5.   <a href="#rfc.section.5">Acknowledgements</a></li>
 <li>6.   <a href="#rfc.section.6">IANA Considerations</a></li>
 <li>7.   <a href="#rfc.section.7">Security Considerations</a></li>
-<li>8.   <a href="#rfc.references">Normative References</a></li>
-<li>Appendix A.   <a href="#rfc.appendix.A">Example Secure Hash Capabilities JSON Object</a></li>
+<li>8.   <a href="#rfc.references">References</a></li>
+<ul><li>8.1.   <a href="#rfc.references.1">Normative References</a></li>
+<li>8.2.   <a href="#rfc.references.2">Informative References</a></li>
+</ul><li>Appendix A.   <a href="#rfc.appendix.A">Example Secure Hash Capabilities JSON Object</a></li>
 <li>Appendix B.   <a href="#rfc.appendix.B">Example Test Vectors JSON Object</a></li>
 <li>Appendix C.   <a href="#rfc.appendix.C">Example Test Results JSON Object</a></li>
 <li><a href="#rfc.authors">Author's Address</a></li>
@@ -863,7 +867,7 @@
   </tbody>
 </table>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
-<p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group.  The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
+<p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group.  The following table describes the secure hash and CMAC JSON elements of the Test Group JSON object.</p>
 <div id="rfc.table.5"/>
 <div id="vs_tg_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -878,8 +882,8 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">type</td>
-      <td class="left">Type of test: short, long or MonteCarlo</td>
+      <td class="left">testType</td>
+      <td class="left">Test category type (KAT or MCT for SHA. ver or gen for CMAC)</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -931,8 +935,8 @@
     </tr>
   </tbody>
 </table>
-<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Vectors JSON Schema</a></h1>
-<p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test vectors.  Each test vector is a JSON object that represents a single test case to be processed by the ACVP client.  The following table describes the JSON elements for each secure hash test vector.</p>
+<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Case JSON Schema</a></h1>
+<p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test cases.  Each test case is a JSON object that represents a single test vector to be processed by the ACVP client.  The following table describes the JSON elements for each secure hash test vector.</p>
 <div id="rfc.table.7"/>
 <div id="vs_tc_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -948,7 +952,7 @@
   <tbody>
     <tr>
       <td class="left">tcId</td>
-      <td class="left">Unique numeric identifier for the test case</td>
+      <td class="left">Numeric identifier for the test case, unique across the entire vector set.</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -1006,7 +1010,7 @@
   <tbody>
     <tr>
       <td class="left">tcId</td>
-      <td class="left">Unique numeric identifier for the test case</td>
+      <td class="left">Numeric identifier for the test case, unique across the entire vector set.</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -1097,7 +1101,7 @@
   </tbody>
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
-<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
+<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the response vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
 <div id="rfc.table.9"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -1143,7 +1147,8 @@
 <p id="rfc.section.6.p.1">This memo includes no request to IANA.</p>
 <h1 id="rfc.section.7"><a href="#rfc.section.7">7.</a> <a href="#Security" id="Security">Security Considerations</a></h1>
 <p id="rfc.section.7.p.1">Security considerations are addressed by the ACVP specification.</p>
-<h1 id="rfc.references"><a href="#rfc.references">8.</a> Normative References</h1>
+<h1 id="rfc.references"><a href="#rfc.references">8.</a> References</h1>
+<h1 id="rfc.references.1"><a href="#rfc.references.1">8.1.</a> Normative References</h1>
 <table>
   <tbody>
     <tr>
@@ -1157,6 +1162,35 @@
         <b id="RFC2119">[RFC2119]</b>
       </td>
       <td class="top"><a>Bradner, S.</a>, "<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>", BCP 14, RFC 2119, DOI 10.17487/RFC2119, March 1997.</td>
+    </tr>
+  </tbody>
+</table>
+<h1 id="rfc.references.2"><a href="#rfc.references.2">8.2.</a> Informative References</h1>
+<table>
+  <tbody>
+    <tr>
+      <td class="reference">
+        <b id="CMACVS">[CMACVS]</b>
+      </td>
+      <td class="top"><a title="NIST">Sharon S. Keller, SSK.</a>, "<a>The CMAC Validation System (CMACVS)</a>", 2011.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="HMACVS">[HMACVS]</b>
+      </td>
+      <td class="top"><a title="NIST">Lawrence E. Bassham III, LEB.</a>, "<a>The Keyed-Hash Message Authentication Code Validation System (HMACVS)</a>", 2016.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="SHA3VS">[SHA3VS]</b>
+      </td>
+      <td class="top"><a title="NIST">Lawrence E. Bassham III, LEB.</a>, "<a>The Secure Hash Algorithm 3 Validation System (SHA3VS)</a>", 2016.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="SHAVS">[SHAVS]</b>
+      </td>
+      <td class="top"><a title="NIST">Lawrence E. Bassham III, LEB.</a>, "<a>The Secure Hash Algorithm Validation System (SHAVS)</a>", 2014.</td>
     </tr>
   </tbody>
 </table>
@@ -1206,7 +1240,7 @@
                   "algorithm": "SHA-256",
                   "testGroups": [
                     {
-                      "type": "long",
+                      "testType": "KAT",
                       "tests": [
                         {
                           "tcId": 2170,
@@ -1223,7 +1257,27 @@
                   ]
                 }
             </pre>
-<p id="rfc.section.B.p.2">The following is a example JSON object for HMAC test vectors sent from the ACVP server to the crypto module.</p>
+<p id="rfc.section.B.p.2">The following is a example JSON object for secure hash Monte Carlo test vectors sent from the ACVP server to the crypto module.</p>
+<pre>
+                {
+                  "acvVersion": "0.2",
+                  "vsId": 1564,
+                  "algorithm": "SHA-1",
+                  "testGroups": [
+                    {
+                      "testType": "MCT",
+                      "tests": [
+                        {
+                          "tcId": 2175,
+                          "len": 20,
+                          "seed": "331b04d56f6e3ed5af349bf1fd9f9591b6ec886e",
+                        },
+                      ]
+                    }
+                  ]
+                }
+            </pre>
+<p id="rfc.section.B.p.3">The following is a example JSON object for HMAC test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
                   "acvVersion": "0.2",
@@ -1250,7 +1304,7 @@
                   ]
                 }
             </pre>
-<p id="rfc.section.B.p.3">The following is a example JSON object for CMAC test vectors sent from the ACVP server to the crypto module.</p>
+<p id="rfc.section.B.p.4">The following is a example JSON object for CMAC test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
                   "acvVersion": "0.2",
@@ -1258,7 +1312,7 @@
                   "algorithm": "CMAC-TDES",
                   "testGroups": [
                     {
-                      "type": "gen",
+                      "testType": "gen",
                       "tests": [
                         {
                           "tcId": 2175,
@@ -1302,7 +1356,30 @@
                 }
 
             </pre>
-<p id="rfc.section.C.p.2">The following is a example JSON object for HMAC test results sent from the crypto module to the ACVP server.</p>
+<p id="rfc.section.C.p.2">The following is a example JSON object for secure hash MCT test results sent from the crypto module to the ACVP server. Reduced to 2 iterations for brevity.</p>
+<pre>
+                {
+                    "acvVersion": "0.2",
+                    "vsId": 1564,
+                    "testResults": [
+                        {
+                            "tcId": 2175,
+			    "resultsArray": [
+			      {
+			        "count" : 0,
+				"md": "23d1f8655a7c9c2bc3bb56868483611e67cb1b3a"
+			      },
+			      {
+			        "count" : 1,
+				"md" : "d3d672efb8e569dc7a37c991a9fc51282412196f"
+			      }
+			   ]
+                        }
+                    ]
+                }
+
+            </pre>
+<p id="rfc.section.C.p.3">The following is a example JSON object for HMAC test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
                     "acvVersion": "0.2",
@@ -1319,7 +1396,7 @@
                     ]
                 }
             </pre>
-<p id="rfc.section.C.p.3">The following is a example JSON object for CMAC test results sent from the crypto module to the ACVP server.</p>
+<p id="rfc.section.C.p.4">The following is a example JSON object for CMAC test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
                     "acvVersion": "0.2",
