--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -729,20 +729,6 @@
       <td class="left"/>
     </tr>
     <tr>
-      <td class="left">testType</td>
-      <td class="left">The test category type</td>
-      <td class="left">value</td>
-      <td class="left">KAT or MCT</td>
-      <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
       <td class="left">ctrSource</td>
       <td class="left">The source of the counter for counter-mode</td>
       <td class="left">value</td>
@@ -975,7 +961,7 @@
     </tr>
     <tr>
       <td class="left">testType</td>
-      <td class="left">The test category type</td>
+      <td class="left">The test category type (KAT or MCT)</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -1164,9 +1150,33 @@
     </tr>
     <tr>
       <td class="reference">
+        <b id="CCMVS">[CCMVS]</b>
+      </td>
+      <td class="top"><a title="NIST">Lawrence E. Bassham III, LEB.</a>, "<a>The CCM Validation System (CCMVS)</a>", 2012.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="GCMVS">[GCMVS]</b>
+      </td>
+      <td class="top"><a title="NIST">Sharon S. Keller, SSK.</a>, "<a>The GCM, GMAC and XPN Validation System (GCMVS)</a>", 2016.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="KWVS">[KWVS]</b>
+      </td>
+      <td class="top"><a title="NIST">Timothy A. Hall, TAH.</a>, "<a>The Key Wrap Validation System (KWVS)</a>", 2014.</td>
+    </tr>
+    <tr>
+      <td class="reference">
         <b id="TMOVS">[TMOVS]</b>
       </td>
       <td class="top"><a title="NIST">Sharon S. Keller, SSK.</a>, "<a>Modes of Operation Validation System for the Triple Data Encryption Algorithm (TMOVS)</a>", 2012.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="XTSVS">[XTSVS]</b>
+      </td>
+      <td class="top"><a title="NIST">Sharon S. Keller, SSK.</a>, "<a>The XTS-AES Validation System (XTSVS)</a>", 2013.</td>
     </tr>
   </tbody>
 </table>
@@ -1409,7 +1419,59 @@
                 }
 
             </pre>
-<p id="rfc.section.C.p.2">An example of the test results format from a decrypt operation including failure case.</p>
+<p id="rfc.section.C.p.2">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for an AES-CBC Monte Carlo test.</p>
+<pre>
+                {
+                  "acvVersion": "0.2",
+                  "vsId": 1564,
+                  "algorithm": "AES-CBC",
+                  "direction": "encrypt",
+                  "testGroups": [
+                    {
+                      "keyLen": 128,
+                      "ivLen": 128
+                      "ptLen": 128
+                      "testType" : "MCT",
+                      "tests": [
+                        {
+                          "tcId": 3171,
+                          "key": "868a6705c03e630327259cd09e63354a",
+			  "iv" : "a771c0fc42300fa7b4c1eca82e1eb2f9",
+                          "pt": "8466e3b1680b40f8bae488e2f392ab33"
+                        }
+                    ]
+                }
+
+            </pre>
+<p id="rfc.section.C.p.3">The following is a example JSON object for test results sent from the crypto module to the ACVP server for a Monte Carlo test, only 2 iterations shown for brevity. For MCT results of each iteration are fed into the next iteration.  Therefore the results carry all fields to assist in any failure diagnosis.</p>
+<pre>
+                {
+                    "acvVersion": "0.2",
+                    "vsId": 1564,
+                    "testResults": [
+                        {
+			  "tcId": 3171,
+			  "resultsArray": [
+			    {
+			      "count" : 0,
+			      "key" : "868a6705c03e630327259cd09e63354a",
+			      "iv": "a771c0fc42300fa7b4c1eca82e1eb2f9",
+			      "pt": "8466e3b1680b40f8bae488e2f392ab33",
+			      "ct": "161ac86ab184f638d43b1435161ebec4"
+                            },
+                            {
+			      "count" : 1,
+			      "key": "9090af6f71ba953bf31e88e5887d8b8e",
+			      "iv": "161ac86ab184f638d43b1435161ebec4",
+			      "pt": "b9cc35ba5d5ea63cf6516a200a17c36b",
+			      "ct": "8c2998edf29357389483bcf33a6484df"
+                            },
+			  ]
+		       }	
+                    ]
+                }
+            </pre>
+<p id="rfc.section.C.p.4">An example of the test results format from an AES-GCM decrypt operation including failure case.</p>
 <pre>
                 {
                     "acvVersion": "0.2",
