--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -442,7 +442,7 @@
   <td class="right">2016</td>
 </tr>
 <tr>
-  <td class="left">Expires: August 5, 2017</td>
+  <td class="left">Expires: August 14, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -463,7 +463,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on August 5, 2017.</p>
+<p>This Internet-Draft will expire on August 14, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -850,7 +850,12 @@ Accept:
 "algorithms" : [
          {
 "algorithm" : "AES-GCM",
-"direction" : "encrypt,decrypt",
+"prereqVals" : [{"algorithm" : "AES", "valValue" : "123456"},
+                {"algorithm" : "DRBG", "valValue" : "123456"}],
+"direction": [
+    "encrypt",
+    "decrypt"
+],
 "ivGen" : "internal",
 "ivGenMode" : "8.2.1",
 "keyLen" : [
