Rerenders changes from previous commit

--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -850,7 +850,12 @@ Accept:
 "algorithms" : [
          {
 "algorithm" : "AES-GCM",
-"direction" : "encrypt,decrypt",
+"prereqVals" : [{"algorithm" : "AES", "valValue" : "123456"},
+                {"algorithm" : "DRBG", "valValue" : "123456"}],
+"direction": [
+    "encrypt",
+    "decrypt"
+],
 "ivGen" : "internal",
 "ivGenMode" : "8.2.1",
 "keyLen" : [
